--- a/letslunch_iPhone2/CreateActivityViewController.xib
+++ b/letslunch_iPhone2/CreateActivityViewController.xib
@@ -38,154 +38,166 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="1036791308">
+					<object class="IBUIView" id="269889537">
 						<reference key="NSNextResponder" ref="885162766"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="1054206049">
-								<reference key="NSNextResponder" ref="1036791308"/>
+							<object class="IBUITextField" id="507313445">
+								<reference key="NSNextResponder" ref="269889537"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 105}, {280, 21}}</string>
-								<reference key="NSSuperview" ref="1036791308"/>
+								<string key="NSFrame">{{20, 20}, {280, 100}}</string>
+								<reference key="NSSuperview" ref="269889537"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">This broadcast will expire in 180 minutes.</string>
-								<nil key="IBUITextColor"/>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUIContentHorizontalAlignment">3</int>
+								<int key="IBUIContentVerticalAlignment">3</int>
+								<string key="IBUIText"/>
+								<int key="IBUIBorderStyle">3</int>
+								<string key="IBUIPlaceholder">Who are you looking to meet?</string>
+								<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
+								<float key="IBUIMinimumFontSize">14</float>
+								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+									<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<string key="name">Helvetica-Oblique</string>
+									<string key="name">Helvetica</string>
 									<string key="family">Helvetica</string>
-									<int key="traits">1</int>
-									<double key="pointSize">10</double>
+									<int key="traits">0</int>
+									<double key="pointSize">15</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica-LightOblique</string>
-									<double key="NSSize">10</double>
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUISegmentedControl" id="205241133">
-								<reference key="NSNextResponder" ref="1036791308"/>
+							<object class="IBUIView" id="1036791308">
+								<reference key="NSNextResponder" ref="269889537"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 65}, {280, 41}}</string>
-								<reference key="NSSuperview" ref="1036791308"/>
+								<array class="NSMutableArray" key="NSSubviews">
+									<object class="IBUILabel" id="1054206049">
+										<reference key="NSNextResponder" ref="1036791308"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{20, 105}, {280, 21}}</string>
+										<reference key="NSSuperview" ref="1036791308"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="507313445"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<string key="IBUIText">This broadcast will expire in 180 minutes.</string>
+										<nil key="IBUITextColor"/>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<string key="name">Helvetica-Oblique</string>
+											<string key="family">Helvetica</string>
+											<int key="traits">1</int>
+											<double key="pointSize">10</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica-LightOblique</string>
+											<double key="NSSize">10</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+									</object>
+									<object class="IBUISegmentedControl" id="205241133">
+										<reference key="NSNextResponder" ref="1036791308"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{20, 65}, {280, 41}}</string>
+										<reference key="NSSuperview" ref="1036791308"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="1054206049"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<int key="IBSegmentControlStyle">2</int>
+										<int key="IBNumberOfSegments">2</int>
+										<int key="IBSelectedSegmentIndex">0</int>
+										<array key="IBSegmentTitles">
+											<string>Coffee</string>
+											<string>Lunch</string>
+										</array>
+										<array class="NSMutableArray" key="IBSegmentWidths">
+											<real value="0.0"/>
+											<real value="0.0"/>
+										</array>
+										<array class="NSMutableArray" key="IBSegmentEnabledStates">
+											<boolean value="YES"/>
+											<boolean value="YES"/>
+										</array>
+										<array class="NSMutableArray" key="IBSegmentContentOffsets">
+											<string>{0, 0}</string>
+											<string>{0, 0}</string>
+										</array>
+										<array class="NSMutableArray" key="IBSegmentImages">
+											<object class="NSNull" id="4"/>
+											<reference ref="4"/>
+										</array>
+										<object class="NSColor" key="IBTintColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MSAwLjUgMAA</bytes>
+										</object>
+									</object>
+									<object class="IBUITableView" id="999859958">
+										<reference key="NSNextResponder" ref="1036791308"/>
+										<int key="NSvFlags">274</int>
+										<string key="NSFrameSize">{320, 60}</string>
+										<reference key="NSSuperview" ref="1036791308"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="205241133"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<object class="NSColor" key="IBUIBackgroundColor" id="305481569">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MCAwAA</bytes>
+										</object>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<bool key="IBUIAlwaysBounceVertical">YES</bool>
+										<bool key="IBUIScrollEnabled">NO</bool>
+										<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+										<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
+										<int key="IBUIIndicatorStyle">1</int>
+										<int key="IBUIStyle">1</int>
+										<int key="IBUISeparatorStyle">2</int>
+										<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+										<float key="IBUIRowHeight">44</float>
+										<float key="IBUISectionHeaderHeight">10</float>
+										<float key="IBUISectionFooterHeight">10</float>
+									</object>
+								</array>
+								<string key="NSFrame">{{0, 130}, {320, 438}}</string>
+								<reference key="NSSuperview" ref="269889537"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1054206049"/>
+								<reference key="NSNextKeyView" ref="999859958"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
+								<reference key="IBUIBackgroundColor" ref="305481569"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBSegmentControlStyle">2</int>
-								<int key="IBNumberOfSegments">2</int>
-								<int key="IBSelectedSegmentIndex">0</int>
-								<array key="IBSegmentTitles">
-									<string>Coffee</string>
-									<string>Lunch</string>
-								</array>
-								<array class="NSMutableArray" key="IBSegmentWidths">
-									<real value="0.0"/>
-									<real value="0.0"/>
-								</array>
-								<array class="NSMutableArray" key="IBSegmentEnabledStates">
-									<boolean value="YES"/>
-									<boolean value="YES"/>
-								</array>
-								<array class="NSMutableArray" key="IBSegmentContentOffsets">
-									<string>{0, 0}</string>
-									<string>{0, 0}</string>
-								</array>
-								<array class="NSMutableArray" key="IBSegmentImages">
-									<object class="NSNull" id="4"/>
-									<reference ref="4"/>
-								</array>
-								<object class="NSColor" key="IBTintColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAwLjUgMAA</bytes>
-								</object>
-							</object>
-							<object class="IBUITableView" id="999859958">
-								<reference key="NSNextResponder" ref="1036791308"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{320, 60}</string>
-								<reference key="NSSuperview" ref="1036791308"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="205241133"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="305481569">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MCAwAA</bytes>
-								</object>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIAlwaysBounceVertical">YES</bool>
-								<bool key="IBUIScrollEnabled">NO</bool>
-								<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
-								<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
-								<int key="IBUIIndicatorStyle">1</int>
-								<int key="IBUIStyle">1</int>
-								<int key="IBUISeparatorStyle">2</int>
-								<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
-								<float key="IBUIRowHeight">44</float>
-								<float key="IBUISectionHeaderHeight">10</float>
-								<float key="IBUISectionFooterHeight">10</float>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 130}, {320, 438}}</string>
-						<reference key="NSSuperview" ref="885162766"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="999859958"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="305481569"/>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-					</object>
-					<object class="IBUITextField" id="507313445">
-						<reference key="NSNextResponder" ref="885162766"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 20}, {280, 100}}</string>
+						<string key="NSFrameSize">{320, 568}</string>
 						<reference key="NSSuperview" ref="885162766"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1036791308"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
+						<reference key="IBUIBackgroundColor" ref="305481569"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">3</int>
-						<int key="IBUIContentVerticalAlignment">3</int>
-						<string key="IBUIText"/>
-						<int key="IBUIBorderStyle">3</int>
-						<string key="IBUIPlaceholder">Who are you looking to meet?</string>
-						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
-						<float key="IBUIMinimumFontSize">14</float>
-						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
-							<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
-							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<string key="name">Helvetica</string>
-							<string key="family">Helvetica</string>
-							<int key="traits">0</int>
-							<double key="pointSize">15</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
-						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="507313445"/>
+				<reference key="NSNextKeyView" ref="269889537"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="305481569"/>
 				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics">
@@ -260,6 +272,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">viewSubview</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="269889537"/>
+					</object>
+					<int key="connectionID">121</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="507313445"/>
 						<reference key="destination" ref="372490531"/>
@@ -324,43 +344,48 @@
 						<int key="objectID">9</int>
 						<reference key="object" ref="885162766"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="507313445"/>
-							<reference ref="1036791308"/>
+							<reference ref="269889537"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">120</int>
+						<reference key="object" ref="269889537"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="507313445"/>
+							<reference ref="1036791308"/>
+						</array>
+						<reference key="parent" ref="885162766"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
 						<reference key="object" ref="507313445"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="885162766"/>
+						<reference key="parent" ref="269889537"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">58</int>
 						<reference key="object" ref="1036791308"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="205241133"/>
-							<reference ref="1054206049"/>
 							<reference ref="999859958"/>
+							<reference ref="1054206049"/>
+							<reference ref="205241133"/>
 						</array>
-						<reference key="parent" ref="885162766"/>
+						<reference key="parent" ref="269889537"/>
 						<string key="objectName">View - viewContent</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">19</int>
-						<reference key="object" ref="205241133"/>
-						<array class="NSMutableArray" key="children"/>
+						<int key="objectID">116</int>
+						<reference key="object" ref="999859958"/>
 						<reference key="parent" ref="1036791308"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">39</int>
 						<reference key="object" ref="1054206049"/>
-						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="1036791308"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">116</int>
-						<reference key="object" ref="999859958"/>
+						<int key="objectID">19</int>
+						<reference key="object" ref="205241133"/>
 						<reference key="parent" ref="1036791308"/>
 					</object>
 				</array>
@@ -373,6 +398,7 @@
 				<string key="11.CustomClassName">MYTextField</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="116.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="120.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<integer value="1" key="19.IUISegmentedControlInspectorSelectedSegmentMetadataKey"/>
 				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -383,7 +409,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">119</int>
+			<int key="maxID">121</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -410,6 +436,7 @@
 						<string key="tableView">UITableView</string>
 						<string key="textFieldDescription">UITextField</string>
 						<string key="viewContent">UIView</string>
+						<string key="viewSubview">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="labelBroadcast">
@@ -430,6 +457,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="viewContent">
 							<string key="name">viewContent</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="viewSubview">
+							<string key="name">viewSubview</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
 					</dictionary>
